# Pr-1

./: ADVANCED_PROJECT_SUMMARY.md  CNAME  Cargo.toml  PROJECT_SUMMARY.md  advanced_demo.sh  auto_teacher.py  demo.sh  docs.pkl  faiss.index  game.java  in  index.html  libadvanced_chat_server.rlib  meta.pkl
app/: globals.css  layout.tsx  page.tsx
app/blogs/: page.tsx
app/contact/: page.tsx
components/: footer.tsx  navigation.tsx
